--- a/style.css
+++ b/style.css
@@ -133,18 +133,18 @@ header .list a:hover{
 	color: lightgreen;
 	transition: 0.7s;
 }
-header .list .deep-Down{
+header .list .drop-down{
 	position: relative;
 
 }
-header .list .deep-Down li a{
+header .list .drop-down li a{
 	padding: 10px 16px;
 }
-header .list .deep-Down ul{
+header .list .drop-down ul{
 	display: none;
 	padding: 10px 0px;
 }
-header .list .deep-Down:hover  ul{
+header .list .drop-down:hover  ul{
 	display: block;
 	position: absolute;
 	height: 14em;
@@ -153,6 +153,16 @@ header .list .deep-Down:hover  ul{
 	box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
     transition: 0.9s;
     border-radius: 4px;
+}
+header .list .drop-down .deep-down ul{
+	visibility: hidden;
+	position: absolute;
+	left: 11.5em;
+    top: 5em;
+}
+header .list .drop-down .deep-down:hover  ul{
+	visibility: visible;
+	transition: 0.9s;
 }
 header .but a{
 	border-radius: 25px;
@@ -166,7 +176,7 @@ header .but a{
 
 /* *******'''''''''''''''''' Home '''''''''''''''''''''********* */
 .home{
-	background-image: url("img/hero-bg.jpg");
+	background-image: linear-gradient(56deg, #37423b7a, #37423b70), url(img/hero-bg.jpg);
 	height: 34em;
     display: flex;
     align-items: center;
@@ -460,6 +470,7 @@ header .but a{
 	font-size: 16px;
 	font-weight: 500;
 	margin-left: 15px;
+	padding: 13px 0px;
 }
 .courses .left{
 	display: flex;
