--- a/style.css
+++ b/style.css
@@ -351,8 +351,7 @@ header .but a{
 }
 .packegs .border{
 	padding: 10px;
-	border: 1px solid;
-	border-color: white;
+	border: 1px solid #eef0ef;
 }
 .packegs .border .row{
 	justify-content: flex-start;
@@ -495,6 +494,7 @@ header .but a{
 	background-image: url("img/trainers/trainer-1.jpg");
 	width: 100%;
 	height: 24em;
+	background-position: center;
 	background-size: cover; 
 	margin-bottom: 25px;  
 }
@@ -502,6 +502,7 @@ header .but a{
 	background-image: url("img/trainers/trainer-2.jpg");
 	width: 100%;
 	height: 24em;
+	background-position: center;
 	background-size: cover;   
 	margin-bottom: 25px;
 }
@@ -509,6 +510,7 @@ header .but a{
 	background-image: url("img/trainers/trainer-3.jpg");
 	width: 100%;
 	height: 24em;
+	background-position: center;
 	background-size: cover;  
 	margin-bottom: 25px; 
 }
@@ -594,6 +596,9 @@ header .but a{
     border: 0.8px solid;
     border-color: #777777;
 }
+.contact .Subscribe form{
+	position: relative;
+}
 .contact .Subscribe .button{
 	border-radius: 30px;
 	font-family: "Open Sans", sans-serif;
@@ -602,9 +607,9 @@ header .but a{
     padding: 10px 30px;
     background-color: lightgreen;
     margin-top: 17px;
-    position: relative;
+    position: absolute;
     left: 11em;
-    top: -27px;
+    top: -18px;
 }
 .contact .Subscribe .button:hover {
 	background-color: #3ac162;
@@ -631,10 +636,13 @@ footer a{
 footer i{
 	height: 2em;
     width: 2em;
-    padding: 11px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin: 6px;
     font-size: 25px;
     color: white;
+    text-align: center;
     background-color: rgb(95, 207, 128);
     border-radius: 50%;
 }
